fix: correct blog layout issue

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -89,15 +89,3 @@
     height: 200px;
     object-fit: cover;
 }
-
-@media (max-width: 768px) {
-    .blog-main {
-        flex-direction: column;
-        padding: 2rem 1rem;
-    }
-
-    .blog-sidebar {
-        padding-left: 0;
-        margin-top: 2rem;
-    }
-}
